# pyguiadapter-i18n

./: README.md  pyproject.toml
pyguiadapter_i18n/: app.py  config.py
pyguiadapter_i18n/locales/: app.en.json  app.ja.json  app.zh.json
